--- a/styles/common.css
+++ b/styles/common.css
@@ -1,6 +1,5 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
 
-
 * {
     margin: 0;
     padding: 0;
@@ -9,7 +8,7 @@
 }
 
 body {
-    background-color: #f8f9fa;
+    background-color: #fff;
     color: #333;
 }
 
@@ -39,24 +38,23 @@ ul {
 .leftMenu {
     flex: 1;
     display: flex;
-    gap: 30px;
+    margin-left : 50px;
+    gap: 60px;
     justify-content: flex-start;
 }
 
 .leftMenu a {
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 500;
     transition: color 0.2s;
 }
 
-.leftMenu a:hover {
-    color: #007bff;
-}
 
 
 .logo {
-    font-size: 24px;
+    font-size: 28px;
     font-weight: 800;
+    letter-spacing: 7px;
     text-align: center;
 }
 
@@ -64,6 +62,7 @@ ul {
 .rightMenu {
     flex: 1;
     display: flex;
+    margin-right : 50px;
     justify-content: flex-end;
     align-items: center;
     gap: 15px;
